# energy-hackathon-2026-submission

./: .gitignore  .vercelignore  Makefile  README.md  conftest.py  pyproject.toml  requirements.lock.txt  requirements.txt
.github/workflows/: ci.yml
data/pypsa_sample/: buses.csv  generators.csv  lines.csv  loads.csv  transformers.csv
demo/: warden-demo.webm
fixtures/: battery_counterfactual.json  battery_recommendations.json  battery_state.json  grid_topology.json  realtime_trace.json
scripts/: download_pypsa_eur.py  freeze_battery_demo.py  freeze_realtime_demo.py  freeze_topology.py
src/: __init__.py  config.py
src/agent/: __init__.py  loop.py  prompts.py  state.py  tools.py
src/api/: __init__.py  main.py  state.py
src/battery/: __init__.py  narration.py  recommender.py  schemas.py  scoring.py  verification.py
src/engine/: __init__.py  actions.py  cascade.py  constants.py  network.py  preflight.py  remediation.py  scan.py  scenarios.py  severity.py
src/grid/: __init__.py  loader.py  pypsa_eur_loader.py
src/integrations/: grid2op_adapter.py  l2rpn_runner.py
src/timeseries/: events.py  profiles.py  scenarios.py  schemas.py  simulator.py  trace.py
tests/: conftest.py  test_agent.py  test_engine_core.py  test_grid2op_adapter.py  test_integrity_audit.py  test_pypsa_eur_loader.py  test_remediation.py
tests/battery/: factories.py  test_api.py  test_dataset_portability.py  test_scoring.py  test_slack_exclusion.py  test_timeaware.py  test_verification.py
tests/timeseries/: test_api.py  test_events.py  test_geographic_scenarios.py  test_profiles.py  (+1 more)
(+6 files in other folders)
